--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardBackgroundColor="@android:color/darker_gray">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/movie_image"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/no_image_downloaded"
-        app:srcCompat="@drawable/no_image" />
-</android.support.v7.widget.CardView>
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        android:layout_margin="1dp"
+        android:layout_gravity="fill_horizontal">
+
+        <ImageView
+            android:id="@+id/movie_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/no_image_downloaded"
+            app:srcCompat="@drawable/no_image"
+            android:adjustViewBounds="true"
+            android:layout_gravity="fill_horizontal"/>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
