--- a/app/src/main/res/menu/type_movie_menu.xml
+++ b/app/src/main/res/menu/type_movie_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/popular_movie"
-        android:title="Popular movie"/>
-    <item android:title="Top rated movie"
+        android:title="@string/popular_movie"/>
+    <item android:title="@string/top_rated_movie"
         android:id="@+id/top_rated_movie"/>
 
 </menu>
