--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".View.DetailMovie.DetailMovieActivity">
+    android:layout_height="match_parent">
+   <!-- tools:context=".View.DetailMovie.DetailMovieActivity">-->
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,94 +26,10 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/poster_for_movie"
                 android:layout_gravity="fill_horizontal"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:textAlignment="viewStart"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                android:text="@string/vote_average"/>
-
-            <TextView
-                android:id="@+id/vote_average"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="24dp"
-                android:textAlignment="viewStart"
-                android:textSize="18sp"
-                android:textStyle="normal" />
-
-        </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:textAlignment="viewStart"
-                    android:textSize="12sp"
-                    android:textStyle="bold"
-                    android:text="@string/plot_synopsis"/>
-
-                <TextView
-                    android:id="@+id/plot_movie"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="24dp"
-                    android:textAlignment="viewStart"
-                    android:textSize="14sp"
-                    android:textStyle="normal" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:orientation="horizontal">
-
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:textAlignment="viewStart"
-                    android:textSize="12sp"
-                    android:textStyle="bold"
-                    android:text="@string/date_release"/>
-
-                <TextView
-                    android:id="@+id/date_release"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="24dp"
-                    android:textAlignment="viewStart"
-                    android:textSize="18sp"
-                    android:textStyle="normal" />
-
-            </LinearLayout>
+            <include layout="@layout/linear_detail_vote"/>
+            <include layout="@layout/linear_detail_description"/>
+            <include layout="@layout/linear_detail_date"/>
 
         </LinearLayout>
     </ScrollView>
