--- a/app/src/main/res/menu/type_movie_menu.xml
+++ b/app/src/main/res/menu/type_movie_menu.xml
@@ -4,5 +4,7 @@
         android:title="@string/popular_movie"/>
     <item android:title="@string/top_rated_movie"
         android:id="@+id/top_rated_movie"/>
+    <item android:id="@+id/selected_list_movies"
+        android:title="@string/selected_movies" />
 
 </menu>
