final version for review

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="middle_marging">16dp</dimen>
+    <dimen name="small_marging">8dp</dimen>
+    <dimen name="underline">1dp</dimen>
 </resources>
