--- a/app/src/main/res/layout/activity_movie_reviews.xml
+++ b/app/src/main/res/layout/activity_movie_reviews.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".View.MovieReviews.MovieReviews">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/reviewMovies_RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/zeroMarging"
+        android:layout_marginTop="@dimen/zeroMarging"
+        android:layout_marginEnd="@dimen/zeroMarging"
+        android:layout_marginBottom="@dimen/zeroMarging" />
+    <ProgressBar
+        android:layout_width= "@dimen/sizePrograssBar"
+        android:layout_height="@dimen/sizePrograssBar"
+        android:id="@+id/progressBarReview"
+        android:visibility="invisible"
+        android:layout_gravity="center" />
+</FrameLayout>
+
